V4.2/V4整合说明与验收清单.md
# 4.1—4.9 V4整合说明与验收清单

## 1. 整合原则

公共优先级固定为：

```text
4.1冻结边界 > 4.2冻结Schema > 4.3—4.7发布边界 > 4.9调度请求 > 4.3—4.7响应 > 4.9实际弃电/缺供确认 > 4.4实际总账 > 4.8评价
```

4.9产生跨模块请求，并在专业模块响应后确认实际弃电和分类缺供，但不改写设备效率和状态；4.8只读取状态提交后的实际量，不参与调度。4.4继续承担唯一公共功率总账，缺供不作为虚拟注入参与闭合。

## 2. 模块对接结果

| 模块 | V4输入 | V4输出 | 责任限制 |
|---|---|---|---|
| 4.3 | 环境与设备参数 | 源侧可用及实际功率、辅机、集电损耗 | 不分配下游负荷 |
| 4.4 | 4.3—4.7实际量及4.9确认量 | 残差、实际弃电、关键缺供和公共损耗 | 缺供只记录，不进入物理平衡式 |
| 4.5 | 4.9请求、SOC、氢库存、4.7提氢量 | 储能/电解槽实际量和状态 | 不决定跨模块分配 |
| 4.6 | 任务数据并先发布功率边界；随后接收4.9逐时请求 | 设施/IT/辅助功率、服务量、队列 | PUE只在本模块计算 |
| 4.7 | 海洋完整需求、4.9可分配功率及4.5/4.6结果 | 电、氢、算力交付、海洋实际服务及未供量 | 不重算制氢、PUE或总目标 |
| 4.8 | 4.3—4.7已提交实际量和4.9标识 | 三目标原始向量与评价KPI | 不回写调度和物理状态 |
| 4.9 | 4.3供给边界、4.6算力边界和冻结容量状态 | 4.5/4.6/4.7请求；响应后实际弃电和分类缺供 | 当前仅为可行性规则，无最优性声明 |

## 3. 当前运行范围

- 时间范围：24 h、1 h步长；4.3的5 min功率按半开区间能量守恒平均。
- 模式：`interface_smoke`。
- 调度：`FEASIBILITY_RULE_V4_4_9`，用于验证责任和接口闭合；**[假设值，待企业调研校准]**。
- 评价：经济、环保、可靠性原始目标与KPI；氢价和年度电价采用公开市场情景锚点，其余未签认成本、排放因子和权重为 **[假设值，待企业调研校准]**。
- 三目标归一化：未生成；缺少单目标理想点和最差点。
- 公式：未经原文核验的代理关系继续标注 **[需查证文献支撑]**。

## 4. 已通过验收

- [x] 4.1—4.2冻结Schema测试6/6；
- [x] 4.3 Version3原生验收6/6；
- [x] 4.3—4.7数据包通过冻结校验器；
- [x] 4.9容量、SOC、充放互斥和计划功率闭合通过；
- [x] 4.6边界先发布，4.9下发逐时算力请求后4.6才执行响应；
- [x] 海洋完整需求、刚性边界、实际服务和未供量可追溯；
- [x] 缺供不作为4.4母线虚拟注入，响应后实际弃电重新计算；
- [x] 4.5先发布可交付氢、4.7返回提取量、4.5再提交库存；
- [x] 4.4只使用actual且逐时残差不超过冻结容差；
- [x] 4.8在状态提交后生成三目标向量，且不修改物理模块；
- [x] 集电、公共、数据中心和海缆损耗分别只计算一次；
- [x] 4.1—4.9联合验收8/8，包含独立缺供压力场景。
- [x] `-VerifyOnly`只按V4根目录相对路径核验交付包，不依赖父目录原始模块；

动态验收日期：2026-07-25。最大公共母线残差为`4.591×10^-14 MW`；24小时联调海洋未供能为`48.1031 MWh`，当前电解槽产氢量为`0 kg`。这些是 **[假设值，待企业调研校准]** 的接口测试结果，不代表工程方案不制氢。

## 5. 可移植运行要求

- MATLAB和PowerShell入口均从自身文件位置解析V4根目录；
- Python桥接所需模块路径由MATLAB按V4根目录动态传入；
- `manifests/v4_package_manifest.csv`只保存包内相对路径；
- 打包后只运行`build_v4_snapshot.ps1 -VerifyOnly`，不要执行不带参数的开发构建模式；
- 只修改V4自有文档、图片或适配器时，使用`-RefreshPackageManifestOnly`更新包清单，不重建历史源快照；
- 不带参数的构建模式默认假定V4位于源项目根目录下一层，也可通过`-SourceRoot`显式指定源项目根目录。

## 6. 尚未由本版证明

- 8760 h工程基准和P0参数签认；
- Pareto前沿、ε约束、随机/鲁棒优化和滚动调度；
- 容量规划、整数启停及动态代理边界回传；
- 构网型储能的频率、电压、故障穿越和黑启动性能；
- 项目NPV、IRR、回收期、LCOE、LCOS、LCOH及正式LCA结论。

## 7. 功能完成度与接口验收的区别

全量8/8通过证明冻结接口、功率守恒、数据包和责任边界能够闭环，不代表全部工程能力完成。
当前仍存在以下功能缺口：

- 电池SOC由50%降至10%，储氢库存由24,000 kg降至0；扣除1%管输损耗后实际交付
  23,760 kg，配置声明的期末状态规则尚未进入4.9硬约束；
- 当前氢气交付来自初始库存，当期制氢量为0，不能直接作为氢能通道经济性结果；
- 4.6边界发布的10 MW条件在线最低功率与内部任务模型约2.394 MW在线底座尚未统一；
- 4.6响应后剩余释放功率只补给海洋需求，未继续进入海缆/制氢，当前26.310 MWh弃电
  因而不能作为四方案最优调度下的弃电结论；
- 氢气交付为管道优先、船运补充的汇总量，尚无独立船期、船运能耗和物流成本；
- 4.7正式入口已旁路原工程中重复的PUE、制氢、系统平衡和总目标函数，但这些文件仍保留用于追溯；
- 4.4是实际功率总账，4.9才是跨模块调度责任方。

完整审查见`V4模块任务完成度与去重审查.md`，整合后的报告正文见
`V4第四章整体章节文案.md`。
